Added interest endpoint

--- a/jmeter_server/jmeter_server.csproj
+++ b/jmeter_server/jmeter_server.csproj
@@ -190,6 +190,7 @@
     </Compile>
     <Compile Include="Models\CustomerType.cs" />
     <Compile Include="Models\DiscountVM.cs" />
+    <Compile Include="Models\InterestVM.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
